branches/V9.0/projeqtor/docs/user/Today.rst
.. include:: ImageReplacement.txt

.. raw:: latex

    \newpage

.. title:: Today (Dashboard)


.. index:: Today
.. index:: Dashboard

.. _today-screen:

Today (Dashboard)
=================

.. figure:: /images/GUI/TODAY_SCR_GlobalView.png
   :alt: Today's Global view
   
   Today screen's Global view
   

This screen allows the user to have an overview of the projects and tasks he is working on.

His projects, the tasks to which the user is assigned, those for which he is responsible as well as the various tasks created by himself or for which he is a requestor are listed in different sections.

Each list can therefore contain different types of tasks. The user can therefore view activities, questions, decisions, tickets, risks, meetings, milestones, ... as well as financial elements, such as quotes, invoices or contracts.

It's the User parameter “First page” by default

This parameter defines the screen that will be displayed first on each connection.

The definition of visibility is based on the access rights of each user


.. index:: Message (Section)

.. _messages-section:

Messages
--------

.. figure:: /images/GUI/TODAY_ZONE_TodayMessages.png
   :alt: Section - Messages 
   :align: center


.. rubric:: Messages

* Messages are displayed  depends on some criteria. 
* Every message is component by title |one| and message |two|.
* Messages are defined in :ref:`message` screen.


.. rubric:: Automatic refresh

* Allows to refresh data according defined delay. 
* Also the screen will be scrolling from top to bottom according defined delay.
* Click on |buttonIconRefresh| to enable/disable automatic refresh. 


.. rubric:: Print

* Click on |iconPrint| to print Today screen. 

.. rubric:: Parameters

* Click on |buttonIconParameter| to access screen parameters.

.. figure:: /images/GUI/TODAY_BOX_Parameters.png
   :alt: Dialog box - Today parameters 
   :align: center
   
.. rubric:: Period for task selection

Allows to define the period for tasks will be displayed.

 .. compound:: **Due date**

 * Select only items with due date less than today plus this selected period.

 .. compound:: **Or not set**
 
 * Select also items with due date not set. 
 
 
.. rubric:: Refresh parameters

Allows to define parameters for automatic refresh.

 .. compound:: **Field Refresh delay**
         
 * Selects the delay between two screen refresh.

 .. compound:: **Field Scroll delay**
         
 * Selects the delay between two scrolling.

.. _items-be-displayed:

.. rubric:: Items to be displayed

* Allows to define sections displayed on the screen.
* Allows to reorder sections displayed with drag & drop feature.
* Using the selector area button icon drag |buttonIconDrag|. 


.. figure:: images/GUI/TODAY_BOX_Parameters_TRUE&FALSE.png
   :alt: You can not drag it here

The number of items to display for the user can be customized in the user parameters, in the display tab.

Enter the number of projects or tasks to appear on the screen.

See: :ref:`User parameters<display-parameters>`

 

If you have added any reports to the Today page, they will appear in the list.
   
.. figure:: /images/GUI/TODAY_BOX_ParametersREPORTS.png
   :alt: Parameters with reports
   :scale: 60
   
   Parameters with reports
      
You can hide or delete the added reports by clicking on the cross.
   
see : :ref:`Favorite Report<favorite_report>`
   
   
   
   
    
.. raw:: latex

    \newpage

Projects
--------

A quick overview of projects status.

The projects list is limited to the project visibility scope of the connected user. 

The number of displayed projects can be defined in the :ref:`global parameters<display>`.


.. figure:: /images/GUI/TODAY_ZONE_Projects.png
   :alt: Section - Projects 
   :align: center
   
   Project section
   

.. rubric:: Description

The list of projects is limited to the extent of visibility of the logged in user.

All the projects to which you are assigned will therefore be displayed in this list



 .. compound:: |one| Scope of the numbers counted

  Checkboxes allow to filter displayed projects:

  * **To do:** Projects to do.
  * **Not closed:** Projects to do and done.
  * **All:** Projects to do, done and closed.

 .. compound:: Projects name

  Click on the name of a project will directly move to it. 

.. rubric:: Manual indicators

Manual indicator can be set on project.

Trend and health status indicators are displayed.



 .. compound:: |two| Icon "Trend"

    This icon allows to display the trend of the project.

 .. compound:: |three| Icon "Health status"

    This icon allows to display the health status of the project.  

.. rubric:: Progress

Calculated progress and overall progress are displayed.



 .. compound:: |four| Calculated progress

    * Actual progress of the work of project.

    * On mouse over the bar
    
    .. figure:: /images/GUI/TODAY_ZONE_Progress.png
      :alt: Calculated progress
      
      Calculated progress
      
    On each project shows part of “to do” (red) compared to “done and closed” (green).




 .. compound:: |five| Overall progress

    Additional progress manually selected for the project.

 .. compound:: |six| Other measure of progress

    * **Left:** Left work for the project.
    * **Margin:** Work margin.
    * **End date:** Planified end date of the project.
    * **Late:** Number of late days in project.
 
 .. compound:: |seven| Numbers of elements concerned to project

  Numbers of elements concerned to a project are displayed.





.. raw:: latex

    \newpage

Tasks
-----

Here are listed, as a “To do list” all the items for which the connected user is either “assigned to”, “:term:`responsible` of”, “:term:`issuer` or :term:`requestor` of”.

Click on an item will directly move to it.

.. note:: 

   **Max items to display Parameter**

   Number of items listed here are limited to a value defined in :ref:`Global parameters<global-display-section>`.



.. tabularcolumns:: |l|l|

.. list-table:: 
   :header-rows: 1

   * - Field
     - Description
   * - :term:`id`
     - Unique Id for the item. Id column displayed unique Id and specific icon for the item
   * - Project
     - The project concerned by the item.
   * - Type
     - Type of item.
   * - Name
     - Name of the item.
   * - Due date
     - Planned end date or due date.
   * - Status
     - Actual status of the item.
   * - Issuer
     - Flag on indicate the user is the issuer for the item.
   * - Resp.
     - Flag on indicate the user is the responsible for the item.


.. raw:: latex

    \newpage    

Extending
---------

You can select any report to be displayed on the Today screen.

.. rubric:: Add selected report

* To do this, just go to the selected report, select parameters and display result (to check it is what you wish on today screen). 
* Click on |buttonIconToday| to insert this report with parameter on the Today screen.
* Any unchanged parameter will be set as default value.
* These reports will be displayed on Today screen like other pre-defined parts.

.. figure:: /images/GUI/REPORT_SCR_DisplayToday.png
   :alt: Display a report on the today screen
   
   Display a report on the today screen
   
   
Click on |buttonIconParameter| to set the location of the report (s) on the Today screen.

Click on the handles to move the item in the list

.. figure:: /images/GUI/REPORT_BOX_ReportDisplayParam.png
   :alt: Parameters of the Today screen
   
   Parameters of the Today screen
   

.. rubric:: Manage extending section

* Click on |buttonIconParameter| to access screen parameters.
* You can reorder like any other parts.
* Click on |buttonIconDelete| to completely remove them from the list.

.. figure:: /images/GUI/TODAY_BOX_ParametersExtending.png
   :alt: Dialog box - Today parameters with extending parts 
   :align: center

   Dialog box - Today parameters with extending parts 

 


 



